# sampler228

./: .gitignore  CMakeLists.txt  README.md
build-mingw/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-mingw/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-mingw/GrooveBoxUI_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-mingw/GrooveBoxUI_autogen/UVLADIE3JM/: moc_AudioEngine.cpp  moc_AudioEngine.cpp.d  moc_MainWindow.cpp.d  moc_PadBank.cpp  moc_PadBank.cpp.d  moc_SampleSession.cpp  moc_SampleSession.cpp.d
build-mingw/GrooveBoxUI_autogen/YPKJ5OE7LN/: moc_BpmArcWidget.cpp  moc_BpmArcWidget.cpp.d  moc_EditPageWidget.cpp  moc_EditPageWidget.cpp.d  moc_FxPageWidget.cpp  moc_FxPageWidget.cpp.d  moc_SamplePageWidget.cpp  moc_SamplePageWidget.cpp.d  moc_SeqPageWidget.cpp  moc_SeqPageWidget.cpp.d  moc_SimplePageWidget.cpp  moc_SimplePageWidget.cpp.d  moc_SystemStats.cpp  moc_SystemStats.cpp.d  moc_TopToolbarWidget.cpp  moc_TopToolbarWidget.cpp.d
src/: AudioEngine.cpp  AudioEngine.h  ConsoleModeGuard.cpp  ConsoleModeGuard.h  FramebufferCleaner.cpp  FramebufferCleaner.h  MainWindow.cpp  MainWindow.h  PadBank.cpp  PadBank.h  SampleSession.cpp  SampleSession.h  Theme.h  main.cpp  op1_engines.cpp  op1_engines.h  simple_fm.cpp  simple_fm.h
src/dx7_core/: controllers.h  dx7_core.cpp  dx7_core.h  dx7note.cc  dx7note.h  env.cc  fm_core.cc  fm_core.h  lfo.cc  lfo.h  libMTSClient.h  synth.h  tuning.cpp  tuning.h
src/ui/: BpmArcWidget.cpp  BpmArcWidget.h  EditPageWidget.cpp  EditPageWidget.h  FxPageWidget.cpp  FxPageWidget.h  PadAssignOverlay.cpp  PadAssignOverlay.h  PadHoldMenuOverlay.cpp  PadHoldMenuOverlay.h  PianoRollOverlay.cpp  PianoRollOverlay.h  ProjectMenuOverlay.cpp  ProjectMenuOverlay.h  SampleBrowserModel.cpp  SampleBrowserModel.h  SamplePageWidget.cpp  SamplePageWidget.h  SeqPageWidget.cpp  SeqPageWidget.h  SimplePageWidget.cpp  SimplePageWidget.h  SynthPageWidget.cpp  SynthPageWidget.h  SystemStats.cpp  SystemStats.h  TopToolbarWidget.cpp  TopToolbarWidget.h  WaveformRenderer.cpp  WaveformRenderer.h
src/vital_core/: vital_core.cpp  vital_core.h
vital-main/plugin/builds/vs17/: Vial_SharedCode.vcxproj  Vial_SharedCode.vcxproj.filters  Vial_StandalonePlugin.vcxproj  Vial_VST.vcxproj  Vial_VST.vcxproj.filters  Vial_VST3.vcxproj
zynaddsubfx-master/doc/win64-mingw64-msys2/: README.txt
zynaddsubfx-master/tlsf/: README.md  tlsf.c
